# notification_app

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml  ✨-feature-request.md  🐛-bug-report.md  📖-documentation.md
.github/workflows/: ci.yml  release-docker.yml  static.yml
app/: __init__.py  version.py
app/api/routes/: auth_bp.py  dashboard_bp.py
app/core/: blog_security.py  config.py  security.py
app/core/utils/: session_utils.py
app/db/: database.py  models.py
app/services/: notification.py  parser.py  polling.py
app/utils/: __init__.py  http_client.py
app/web/: __init__.py  main.py
app/web/static/js/: notification-manager.js  notification-settings.js  push-client.js  service-worker.js  session.js  user-menu.js
app/web/templates/: base.html  dashboard.html  login.html
demo/: index.html
scripts/: create_docker_img.sh  generatekeys.py
test/: index.html  serve.py
tests/: test_dummy.py
