[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "notification-app"
dynamic = ["version"]
description = "A web application for real-time blog notifications with Azure AD authentication and web push support"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "vakesz", email = "hello@vakesz.com" },
]
keywords = ["flask", "notifications", "azure-ad", "web-push", "blog-monitoring"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Flask",
    "Topic :: Communications",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
]
dependencies = [
    "flask>=3.1.1",
    "Flask-WTF>=1.2.2",
    "Flask-Limiter>=3.12",
    "Flask-Cors>=6.0.1",
    "jinja2>=3.1.6",
    "pywebpush>=2.0.3",
    "requests>=2.32.4",
    "requests-ntlm>=1.3.0",
    "python-dotenv>=1.1.1",
    "werkzeug>=3.1.3",
    "msal>=1.32.3",
    "gunicorn>=23.0.0",
    "beautifulsoup4>=4.13.4",
    "python-dateutil>=2.9.0",
    "apscheduler>=3.11.0",
    "cryptography>=45.0.4",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.0.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.0.0",
    "black>=25.1.0",
    "flake8>=7.3.0",
    "flake8-pyprojecttoml>=0.0.1",
    "isort>=6.0.0",
]


[project.urls]
Homepage = "https://github.com/vakesz/notification_app"
Repository = "https://github.com/vakesz/notification_app"
Documentation = "https://github.com/vakesz/notification_app/blob/main/README.md"
"Bug Tracker" = "https://github.com/vakesz/notification_app/issues"

[tool.setuptools]
packages = ["app"]
include-package-data = true

[tool.setuptools.package-data]
app = ["web/static/**/*", "web/templates/**/*"]

[tool.setuptools.dynamic]
version = { attr = "app.__version__" }

[tool.black]
line-length = 120
target-version = ["py310"]
include = '\.pyi?$'

[tool.flake8]
max-line-length = 120

[tool.isort]
profile = "black"
multi_line_output = 3
