[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "notification-app"
dynamic = ["version"]
description = "A web application for real-time blog notifications with Azure AD authentication and web push support"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "vakesz", email = "hello@vakesz.com" },
]
keywords = ["flask", "notifications", "azure-ad", "web-push", "blog-monitoring"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Flask",
    "Topic :: Communications",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
]
dependencies = [
    "flask>=3.1.1",
    "Flask-WTF>=1.2.2",
    "Flask-Limiter>=3.12",
    "Flask-Cors>=6.0.1",
    "jinja2>=3.1.6",
    "pywebpush>=2.0.3",
    "requests>=2.32.4",
    "requests-ntlm>=1.3.0",
    "python-dotenv>=1.1.1",
    "werkzeug>=3.1.3",
    "msal>=1.32.3",
    "gunicorn>=23.0.0",
    "beautifulsoup4>=4.13.4",
    "python-dateutil>=2.9.0",
    "apscheduler>=3.11.0",
    "cryptography>=45.0.4",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.0.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.0.0",
    "ruff>=0.6.8",
]


[project.urls]
Homepage = "https://github.com/vakesz/notification_app"
Repository = "https://github.com/vakesz/notification_app"
Documentation = "https://github.com/vakesz/notification_app/blob/main/README.md"
"Bug Tracker" = "https://github.com/vakesz/notification_app/issues"

[tool.setuptools]
packages = ["app"]
include-package-data = true

[tool.setuptools.package-data]
app = ["web/static/**/*", "web/templates/**/*"]

[tool.setuptools.dynamic]
version = { attr = "app.__version__" }

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # TODO <vakesz>: remove these ignores one by one and fix the issues
    "TRY300", "TRY400", "TRY401", "ANN401", "PLR0911", "EM101",
    "TRY004", "PERF203", "ANN001", "PERF401", "TRY003", "SIM103",
    "EM102", "BLE001", "PLC0415", "S324", "RUF005", "S608", "ANN204",
    "RUF012", "RUF003", "RUF002", "RUF001", "RUF006", "TD003", "ANN003",
    "ANN002", "ANN202", "ANN201", "TRY301",
    # Documentation (too verbose)
    "D",
    # TODO comments
    "FIX002",
    # Boolean traps (Flask patterns)
    "FBT001", "FBT002", "FBT003",
    # Complexity limits (Flask needs flexibility)
    "PLR2004", "PLR0913", "PLR0912", "PLR0915", "C901",
    # Security exceptions for dev/test
    "S101", "S105", "S106", "S311", "S602",
    # Formatter conflicts
    "ISC001", "COM812",
    # Python flexibility
    "E722", "E731",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN", "S101", "PLR2004", "INP001"]
"scripts/**/*.py" = ["ANN", "T201", "S602", "INP001"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 80
